# Backoffice

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app/templates/: base.html  pagination.html
category/: admin.py  forms.py  models.py  urls.py  views.py
category/management/commands/: import_category.py
category/migrations/: 0001_initial.py  0002_category_url.py  0003_auto_20260127_1527.py  0003_auto_20260127_1528.py  0004_merge_0003_auto_20260127_1527_0003_auto_20260127_1528.py  0005_alter_category_name.py
category/templates/: category_create.html  category_delete.html  category_list.html  category_update.html
client/: agent.py  clients.py  models.py  prompts.py  urls.py  views.py
client/migrations/: 0001_initial.py
client/templates/: IAgent.html  sku_data.html
history/: admin.py  forms.py  models.py  urls.py  views.py
history/management/commands/: import_history.py
history/migrations/: 0001_initial.py  0002_alter_history_options_rename_entidade_history_entity_and_more.py
history/templates/: history.html  history_create.html  history_delete.html  history_list.html  history_update.html
product_type/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
product_type/migrations/: 0001_initial.py  0002_rename_nome_producttype_name.py  0003_alter_producttype_name.py  0004_alter_producttype_name.py
product_type/templates/: product_create.html  product_delete.html  product_list.html  product_update.html
(+1 files in other folders)
