[project]
name = "backoffice"
version = "0.1.0"
description = ""
authors = [
    {name = "lima.rodrigo",email = "lima.rodrigo@magazineluiza.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "django-mptt (>=0.18.0,<0.19.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
